--- a/rick_and_morty.html
+++ b/rick_and_morty.html
@@ -7,6 +7,7 @@
     <title>Rick and Morty Characters</title>
 </head>
 <body>
+<main>
 <h1>Rick and Morty Characters</h1>
 
     <div>
@@ -308,6 +309,7 @@
 
     
     </div>
+</main>
     
 </body>
 </html>
